--- a/style.css
+++ b/style.css
@@ -93,13 +93,17 @@ header{
 
 /* main */
 
+img{
+    max-width: 100%;
+    height: auto;
+}
 .banner_container{
     margin: 40px 0px;
 }
 
 .banner_pic{
-    min-width: 1350px;
-    height: 355px;
+    width: 100%;
+    height: auto;
 }
 
 .category_heading{
@@ -113,7 +117,7 @@ header{
 }
 
 .offer_container{
-    height: 1000px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -148,4 +152,60 @@ header{
     font-size: 15px;
     text-decoration: none;
     padding-bottom: 5px;
+}
+
+@media (max-width: 768px){
+
+    header{
+        flex-direction: column;
+        height: auto;
+        padding: 10px 0;
+    }
+
+    .nav_bar{
+        min-width: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .search_input{
+        min-width: auto;
+        width: 100%;
+    }
+
+    .search_bar{
+        width: 90%;
+        margin: 10px 0;
+    }
+
+    .action_bar{
+        width: 100%;
+        justify-content: space-evenly;
+        margin: 10px 0;
+    }
+
+    .category_heading{
+        font-size: 1.2em;
+        margin-left: 15px;
+    }
+
+    .offer_container{
+        justify-content: center;
+    }
+
+    .offer_item{
+        width: 45%;
+        margin-bottom: 10px;
+    }
+
+    .footer_container{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer_column{
+        margin-bottom: 20px;
+    }
 }
